fix status bar on mobile

--- a/src/status-bar.css
+++ b/src/status-bar.css
@@ -7,7 +7,6 @@
 
 .sitemap-trigger {
   cursor: pointer;
-  user-select: none;
   font-weight: 300;
 }
 
